--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Natures-world</title>
-        
+        <link ref="stylesheet" href="style.css">
     </head>
     <body>
         <div class="container">
